force-app/main/default/objects/Quote/validationRules/Deposit_bigger_than_total_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_bigger_than_total_amount</fullName>
    <active>true</active>
    <errorConditionFormula>Deposit_Required__c &gt;  Total_Quoted_Amount__c</errorConditionFormula>
    <errorDisplayField>Deposit_Required__c</errorDisplayField>
    <errorMessage>Deposit cannot exceed the total quoted amount.</errorMessage>
</ValidationRule>