force-app/main/default/objects/Quote/validationRules/Deposit_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Deposit_Required__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Deposit_Required__c</errorDisplayField>
    <errorMessage>Complete this field with a positive amoiunt.</errorMessage>
</ValidationRule>