force-app/main/default/objects/Quote/validationRules/Event_date_must_be_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_date_must_be_in_the_future</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt;= NOW()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Complete this field with a correct date in future.</errorMessage>
</ValidationRule>