force-app/main/default/objects/Quote/listViews/new.listView-meta.xml
<ListView>
    <fullName>new</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Mine</filterScope>
    <label>new</label>
</ListView>